[project]
name = "anton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.5.8",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "requests>=2.33.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
